--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -11,3 +11,4 @@ The idea in classification is to find to which of a set of categories a new obse
 \subsection{Notation}
 \label{sub:Notation}
 
+MCE is misclassification error
