--- a/latex/Appendix.tex
+++ b/latex/Appendix.tex
@@ -1,7 +1,14 @@
-\section{EPE}
-\label{sec:EPE}
+\section{Metods for validation}
+\label{sec:Metods for validation}
+\todo{Find better name}
+\subsection{EPE}
+\label{sub:EPE}
+Bias-varance tradeoff \url{http://en.wikipedia.org/wiki/Bias%E2%80%93variance_tradeoff} \\
+This is also important for classificatoin (see article).
 
-\section{Cross-validation}
-\label{sec:Cross-validation}
+\subsection{Cross-validation}
+\label{sub:Cross-validation}
 
+\subsection{Bootstrapping}
+\label{sub:Bootstrapping}
 
