--- a/latex/Linear_Classifiers.tex
+++ b/latex/Linear_Classifiers.tex
@@ -127,4 +127,4 @@ Finally, a test set was generated, using \Sexpr{Ntest} realizations from each gr
 %
 Although, the methods seem very similar, and in the toy example had almost equal performance, their can perform very different. LDA is based on some very special conditions, compared to logistic regression. In the derivation of Fisher's linear discriminant, it was clear that LDA can perform well outside the assumptions of normality, but logistic is still considered a more \textit{general} method. Therefore logistic regression is usually the preferred choice \cite[p.~128]{modstat}.
 \\\colorbox{yellow}{Talk about how LDA can perform well for categorical variables, but logistic is better (modstat. p128}\\
-
+\colorbox{yellow}{Say something about QDA and RDA?}\\
