--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -5,7 +5,8 @@ This project is an introduction to classification in statistics. The goal was ge
 \\
 The idea in classification is to find to which of a set of categories a new observation belongs. This is done by creating a classifier on a training set of observed data $(\mathbf{x}_i, y_i)$, for $i = 1, \ldots, N$, where $\mathbf{x}_i$ is a vector of features, and $y_i$ is to which class it belongs. Over time, there are a variety of approaches, no one methods that can claim the title of the best. This is because different assumptions fits different datasets, and the size of the training data is also important to consider. \\
 \colorbox{yellow}{Write something about how bad methods with larger training sets do better than good algorithms with smaller sets}\\
-\colorbox{yellow}{Should do some simulations on this.}
+\colorbox{yellow}{Should do some simulations on this.}\\
+\colorbox{yellow}{Say something about unordered classes.}
 
 
 \subsection{Notation}
