--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -11,5 +11,9 @@ The idea in classification is to find to which of a set of categories a new obse
 
 \subsection{Notation}
 \label{sub:Notation}
-
-MCE is misclassification error
+MCE is misclassification error. \\
+$\mathbf{x}$ is a vector. \\
+$x_i$ is an element in $\mathbf{x}$. \\
+$\mathbf{x}_i$ is a predictor/data point.  \\
+$\mathbf{x}_{ij}$ is element $j$ in $\mathbf{x}_i$. \\
+$\mathbf{A}$ is a matrix \\
