--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -12,8 +12,10 @@ The idea in classification is to find to which of a set of categories a new obse
 \subsection{Notation}
 \label{sub:Notation}
 MCE is misclassification error. \\
+SD is standard diviation. \\
 $\mathbf{x}$ is a vector. \\
 $x_i$ is an element in $\mathbf{x}$. \\
 $\mathbf{x}_i$ is a predictor/data point.  \\
 $\mathbf{x}_{ij}$ is element $j$ in $\mathbf{x}_i$. \\
 $\mathbf{A}$ is a matrix \\
+$I\{a = b\}$ is the indicator function.\\
